--- a/_posts/database/2014-11-16-sql_basic.md
+++ b/_posts/database/2014-11-16-sql_basic.md
@@ -2,7 +2,7 @@
 layout: post
 title: sql基础
 categories: db
-tags: sql
+tags: sql 范式
 ---
 
 *   [select 执行顺序](#select)
@@ -10,7 +10,7 @@ tags: sql
 *   [索引](#index)
 *   [参考](#ref)
 
-8.  ps
+1.  ps
 
     1.  update product_details set weight=38, exist = 1 where name = 'jim'// 更新操作,and是错误的　
 
