--- a/_posts/database/2014-11-16-sql_basic.md
+++ b/_posts/database/2014-11-16-sql_basic.md
@@ -5,10 +5,8 @@ categories: db
 tags: sql 范式
 ---
 
-*   [select 执行顺序](#select)
-    *   [细解](#sql)
-*   [索引](#index)
-*   [参考](#ref)
+* TOC
+{:toc}
 
 1.  ps
 
@@ -32,8 +30,19 @@ tags: sql 范式
 
     10.   最早的mysql一次查询只能够使用其中一个索引，5.0即以后，mysql引入了索引合并（index merge）的策略，但是完全可以通过建立多列索引来避免索引合并给数据库带来额外的开销,以达到更好的性能。
 
+## 范式
 
-## 索引 {#index}
+### 基本概念
+
+### 一范式
+
+### 二范式
+
+### 三范式
+
+### BC范式
+
+## 索引
 
 1.  查看表的索引　　
 
@@ -70,7 +79,7 @@ COLLATE=utf8_bin
 主从一致：
    只读主库，从库只做failover故障转移
 
-## 参考 {#ref}
+## 参考
 
 [1]<http://www.dofactory.com/sql/alias>
 
