--- a/_posts/unix/resource/2015-12-27-top.md
+++ b/_posts/unix/resource/2015-12-27-top.md
@@ -5,6 +5,30 @@ categories: unix
 tags: top htop glances
 ---
 
+load + cpu使用率 + 内存概览 + 进程资源消耗
+
+#### 示例
+
+默认的展示的信息如下
+
+    top - 08:31:11 up 7 days, 18:20,  1 user,  load average: 1.19, 0.86, 0.68
+    Tasks: 188 total,   1 running, 187 sleeping,   0 stopped,   0 zombie
+    Cpu(s):  6.3%us,  2.5%sy,  0.0%ni, 90.7%id,  0.0%wa,  0.0%hi,  0.4%si,  0.1%st
+    Mem:   8058920k total,  7766428k used,   292492k free,     5604k buffers
+    Swap:  2096440k total,  1291708k used,   804732k free,   758104k cached
+    
+      PID USER      PR  NI  VIRT  RES  SHR S %CPU %MEM    TIME+  COMMAND
+    26797 sankuai   20   0 14.8g 6.1g 7340 S 75.8 79.7 458:59.43 java
+
+第一行： 当前时间， 启动时间  load  参见[load_average](/2015/12/27/load_average)
+
+第二行： 总进程数(为什么和pstree显示的数量对不上) 当前运行中的进程数  sleeping的进程数  ....
+
+第三行： cpu相关
+
+第四行： 内存相关
+
+
 #### cpu利用率
 
 `用户时间` User Time 即us所对应的列，表示cpu执行用户进程所占用的时间，通常情况下希望us时间的占比越高越好。
@@ -29,6 +53,24 @@ tags: top htop glances
 
 *   `-p`  可以指定查看的进程
 
+#### 内存
+
+参见 [free]
+
+#### 进程相关
+
+VIRT 虚拟内存
+
+RES 实际占用的物理内存大小 RES = CODE + DATA
+
+CODE Code Size (kb) 
+
+The amount of physical memory devoted to executable code, also known as the ’text resident set’ size or TRS
+
+DATA  Data+Stack Size (kb)
+  
+The amount of physical memory devoted to other than executable code, also known as the ’data resident set’ size or DRS
+
 #### top的加强版`htop`,`glances`
 
 ubuntu安装
@@ -39,5 +81,6 @@ ubuntu安装
 mac安装 
 mac上的包管理工具brew port，自行安装
 
+	brew install htop
 	brew install htop
 	sudo port install glances
