--- a/_posts/soft/2014-11-17-gitBasic.md
+++ b/_posts/soft/2014-11-17-gitBasic.md
@@ -48,6 +48,7 @@ tags: git
 #### 强制回到某一次提交
 
     git reset --hard shaiID
+    git push --force 强制覆盖远端分支
 
 #### git reset rebase revert
 
@@ -59,6 +60,11 @@ tags: git
 
     git init
     git remote add origin xxxx.git
+    
+#### git diff
+    
+    git diff master 所在分支diff本地master分支
+    git diff origin/master 所在分支diff远端master分支
 
 #### git常规使用
  
