1.调整计划 2.完善实现模式读书笔记

--- a/_posts/think/2017-02-06-2017_year_plan.md
+++ b/_posts/think/2017-02-06-2017_year_plan.md
@@ -46,27 +46,27 @@ tags: plan
 
 这几本书都有翻过，基本都在50%之上，但感觉还是差点劲。重在总结，串联知识，升华，结合已有经验再做归纳，生成blog。
 
-时间： 2月7日-4月15日 
+时间： 2月7日-7月31日 
 
 书籍：
 
-1. 实现模式*
+1. 实现模式*  done
 
-2. head first设计模式*
+2. head first设计模式* doing
 
-3. 设计模式*
+3. 设计模式*  doing
 
-4. 领域驱动设计 软件核心复杂性应对之道*
+4. 领域驱动设计 软件核心复杂性应对之道* todo
 
-5. 实现领域驱动设计*
+5. 实现领域驱动设计*  todo
 
-6. effective java 第二版
+6. effective java 第二版  undo
 
-7. 重构
+7. 重构  doing
 
 ##### java并发
 
-时间 4月20日 -6月31日
+时间 8月1日 -9月31日
 
 书籍：
 
@@ -82,7 +82,7 @@ tags: plan
 
 ##### 网络
 
-时间： 7月10日-10月31日
+时间： 10月1日-11月31日
 
 1. 图解tcp/ip
 
@@ -96,7 +96,7 @@ tags: plan
 
 ##### 操作系统
 
-时间： 11月10日- 1月30日
+时间： 12月1日- 1月30日
 
 1. 深入理解计算机系统（optional）
 
