--- a/_posts/unix/2015-12-27-temp.md
+++ b/_posts/unix/2015-12-27-temp.md
@@ -113,6 +113,8 @@ PATH中将/usr/local/bin/  放在/usr/bin之前
 
 HttpClient4.x可以自带维持会话功能，只要使用同一个HttpClient且未关闭连接，则可以使用相同会话来访问其他要求登录验证的服务
 
+
+idea 类图插件 fn + delete 删除类
 ###  参考
 
 [screen]<http://www.ibm.com/developerworks/cn/linux/l-cn-screen/>
