--- a/_posts/unix/2015-12-27-temp.md
+++ b/_posts/unix/2015-12-27-temp.md
@@ -115,6 +115,9 @@ HttpClient4.x可以自带维持会话功能，只要使用同一个HttpClient且
 
 
 idea 类图插件 fn + delete 删除类
+
+predicate 谓词：在计算机语言的环境下，谓词是指条件表达式的求值返回真或假的过程。
+
 ###  参考
 
 [screen]<http://www.ibm.com/developerworks/cn/linux/l-cn-screen/>
