去除敏感信息

--- a/_posts/unix/resource/2015-12-27-top.md
+++ b/_posts/unix/resource/2015-12-27-top.md
@@ -18,7 +18,7 @@ load + cpu使用率 + 内存概览 + 进程资源消耗
     Swap:  2096440k total,  1291708k used,   804732k free,   758104k cached
     
       PID USER      PR  NI  VIRT  RES  SHR S %CPU %MEM    TIME+  COMMAND
-    26797 sankuai   20   0 14.8g 6.1g 7340 S 75.8 79.7 458:59.43 java
+    26797 *******   20   0 14.8g 6.1g 7340 S 75.8 79.7 458:59.43 java
 
 第一行： 当前时间， 启动时间  load  参见[load_average](/2015/12/27/load_average)
 
