--- a/_posts/clean_code/2016-07-26-proxy.md
+++ b/_posts/clean_code/2016-07-26-proxy.md
@@ -180,8 +180,7 @@ Proxy$ProxyClassFactory.apply
 2. $Proxy2的方法执行实际是通过内部的InvocationHandler（是Proxy的一个属性）来执行的。
 3. 代理类是final
 
-借用head first design patterns中的uml图,可以参照下
-
+具体的类图如下：
 ![proxy_class_uml](/images/java/proxy_class_uml.png)
 
 生成的代理类具体如下：
