--- a/_posts/clean_code/2016-07-26-adapter.md
+++ b/_posts/clean_code/2016-07-26-adapter.md
@@ -5,6 +5,11 @@ categories: clean_code
 tags: adapter
 ---
 
+* TOC
+{:toc}
+
+## 定义
+
 对象适配器、类适配器、双向适配器
 
 Target、Adapter、Adaptee
@@ -14,5 +19,17 @@ Target、Adapter、Adaptee
 
 类适配器
 ![类适配器](/images/design_pattern/class_adapter.png)
+
+## 优点
+
+## 使用场景
+
+## eg
+
+RunnableAdapter
+
+![RunnableAdapter](/images/design_pattern/adapter.png)
+
+## 参考
 
 [wikipedia](https://en.wikipedia.org/wiki/Adapter_pattern)
