--- a/_posts/clean_code/2016-07-26-factory.md
+++ b/_posts/clean_code/2016-07-26-factory.md
@@ -30,6 +30,10 @@ tags: factory
 4. 可以返回更抽象的类型
 5. 低耦合，将创建对象的职责和使用对象的职责中分开，客户端不需要知道具体的产品类，只需要关心所需产品对应的工厂
 
+### 使用场景
+
+1. 
+
 ## 工厂方法
 
 `定义一个用于创建对象的接口，让子类决定实例化哪一个类，工厂方法使一个类的实例化延迟到其子类。`
@@ -52,6 +56,10 @@ tags: factory
 3. 遵从依赖倒置原则
 
 [代码举例](https://github.com/lcj1992/learn/blob/master/java/designPattern/src/main/java/creational/facotry/FactoryTest.java)
+
+### 使用场景
+
+todo
 
 ## 抽象工厂
 
