--- a/_posts/unix/2015-12-27-temp.md
+++ b/_posts/unix/2015-12-27-temp.md
@@ -118,6 +118,9 @@ idea 类图插件 fn + delete 删除类
 
 predicate 谓词：在计算机语言的环境下，谓词是指条件表达式的求值返回真或假的过程。
 
+
+pstree 可以查看进程包含的线程数
+
 ###  参考
 
 [screen]<http://www.ibm.com/developerworks/cn/linux/l-cn-screen/>
