--- a/_posts/unix/resource/2015-12-27-top.md
+++ b/_posts/unix/resource/2015-12-27-top.md
@@ -16,7 +16,7 @@ load + cpu使用率 + 内存概览 + 进程资源消耗
     Cpu(s):  6.3%us,  2.5%sy,  0.0%ni, 90.7%id,  0.0%wa,  0.0%hi,  0.4%si,  0.1%st
     Mem:   8058920k total,  7766428k used,   292492k free,     5604k buffers
     Swap:  2096440k total,  1291708k used,   804732k free,   758104k cached
-    
+
       PID USER      PR  NI  VIRT  RES  SHR S %CPU %MEM    TIME+  COMMAND
     26797 *******   20   0 14.8g 6.1g 7340 S 75.8 79.7 458:59.43 java
 
@@ -61,14 +61,14 @@ load + cpu使用率 + 内存概览 + 进程资源消耗
 
 VIRT 虚拟内存
 
-RES 实际占用的物理内存大小 RES = CODE + DATA
+`RES` 实际占用的物理内存大小 RES = CODE + DATA
 
-CODE Code Size (kb) 
+CODE Code Size (kb)
 
 The amount of physical memory devoted to executable code, also known as the ’text resident set’ size or TRS
 
 DATA  Data+Stack Size (kb)
-  
+
 The amount of physical memory devoted to other than executable code, also known as the ’data resident set’ size or DRS
 
 #### top的加强版`htop`,`glances`
@@ -78,7 +78,7 @@ ubuntu安装
     sudo apt-get install htop
     sudo apt-get install glances
 
-mac安装 
+mac安装
 mac上的包管理工具brew port，自行安装
 
 	brew install htop
