--- a/_posts/clean_code/2016-07-26-factory.md
+++ b/_posts/clean_code/2016-07-26-factory.md
@@ -24,15 +24,16 @@ tags: factory
 
 ### 优点
 
-1. 有名字，根据方法的意图来命名，可读性强。Lists#newArrayList() Lists#newLinkedList()
-2. 对象可复用 Integer#valueOf(), Boolean#valueOf()
-3. 创建参数化实例时，代码更简洁 Maps#newHashMap()
-4. 可以返回更抽象的类型
-5. 低耦合，将创建对象的职责和使用对象的职责中分开，客户端不需要知道具体的产品类，只需要关心所需产品对应的工厂
+1. 分离创建对象的职责与对象本身所承担的职责，收敛创建对象的职责到工厂类。
+2. 可读性强，有名字，根据方法的意图来命名。Lists#newArrayList() Lists#newLinkedList()
+3. 对象可复用,(享元模式) Integer#valueOf(), Boolean#valueOf()
+4. 创建参数化实例时，代码更简洁 Maps#newHashMap()
+5. 可以返回更抽象的类型
+6. 低耦合，将创建对象的职责和使用对象的职责中分开，客户端不需要知道具体的产品类，只需要关心所需产品对应的工厂
 
 ### 使用场景
 
-1. 
+todo
 
 ## 工厂方法
 
@@ -83,7 +84,6 @@ todo
 2. 开闭原则：
     * 遵从：添加新的产品组合时，新增对应的工厂类即可。
     * 违反：添加新的产品时，所有的工厂类都需要添加对应的创建方法
-
 
 ## 参考
 
