--- a/_posts/clean_code/2016-07-26-builder.md
+++ b/_posts/clean_code/2016-07-26-builder.md
@@ -5,14 +5,34 @@ categories: clean_code
 tags: builder
 ---
 
-Director、抽象Builder、具体Builder、产品
+* TOC
+{:toc}
 
-具体builder持有产品的引用，在buildView中设置产品属性，然后通过getResult返回构造的产品
+## 定义
 
-Director持有Builder的引用，在construct中调用builder的构造方法，然后通过builder的getResult方法返回构造的产品
+封装一个产品的构造过程，并允许按步骤构造，经常被用来创建组合结构。
 
-![类图](/images/design_pattern/builder.png)
+## 应用举例
 
-参考
+1. lombok的@Builder注解,就是effective java中讲的。
+2. spring mvc中的UriComponentsBuilder
 
-[wikipedia]<https://en.wikipedia.org/wiki/Builder_pattern>
+类图：
+
+![builder](/images/design_pattern/builder.png)
+
+## 优缺点
+
+优点：
+
+1. 将一个复杂对象的创建过程封装起来，和工厂模式一样，将创建对象的职责和对象本身所承担的职责分离。
+2. 允许对象通过多个步骤来创建，并且可以改变过程（这和只有一个步骤的工厂模式不同）
+3. 产品的实现可以被替换，因为客户只看到一个抽象的接口
+
+缺点：
+
+1. 与工厂模式相比，采用生成器模式创建对象的客户，需要具备更多的领域知识。
+
+## 参考
+
+[wikipedia](https://en.wikipedia.org/wiki/Builder_pattern)
