--- a/_posts/clean_code/2016-07-26-builder.md
+++ b/_posts/clean_code/2016-07-26-builder.md
@@ -10,7 +10,7 @@ tags: builder
 
 ## 定义
 
-封装一个产品的构造过程，并允许按步骤构造，经常被用来创建组合结构。
+将一个复杂对象的构建与它的表示分离，使得同样的构建过程可以创建不同的表示。（封装一个产品的构造过程，并允许按步骤构造，经常被用来创建组合结构。）
 
 ## 应用举例
 
