--- a/_posts/clean_code/2016-07-26-factory.md
+++ b/_posts/clean_code/2016-07-26-factory.md
@@ -33,7 +33,8 @@ tags: factory
 
 ### 使用场景
 
-todo
+1. 实例化时有一定逻辑的，我都倾向于对外提供工厂方法，可以是在本类内提供，也可以单独搞个类，承担创建对象的职责。（extract method,extract class）
+2. 当类的创建对象的职责委托给多个帮助子类中的某一个，并且你希望将哪一个帮助子类是代理者这一信息局部化的时候。
 
 ## 工厂方法
 
@@ -46,35 +47,37 @@ todo
 ![类图](/images/design_pattern/factory.png)
 
 1. IProduct: 定义工厂方法所创建对象的接口
-2. 实现Product接口
-3. 声明工厂方法，返回一个Product类型对象，也可以定义一个工厂方法的缺省实现；可以调用工厂方法以创建一个Product对象
-4. 重定义工厂方法，返回一个ConcreteProduct实例
+2. ConcreteProduct： 实现Product接口
+3. Factory：声明工厂方法，返回一个Product类型对象，也可以定义一个工厂方法的缺省实现；可以调用工厂方法以创建一个Product对象
+4. ConcreteFactory：重定义工厂方法，返回一个ConcreteProduct实例
 
 ### 优点
 
 1. 简单工厂的优点
 2. 扩展性高，扩展遵从开闭原则，新增产品通过添加产品类和对应产品的工厂类来实现，不需要修改原有代码
-3. 遵从依赖倒置原则
 
 [代码举例](https://github.com/lcj1992/learn/blob/master/java/designPattern/src/main/java/creational/facotry/FactoryTest.java)
 
 ### 使用场景
 
-todo
+1. 同简单工厂，当类的创建对象的职责委托给多个帮助子类中的某一个，并且你希望将哪一个帮助子类是代理者这一信息局部化的时候。
+2. 当一个类不知道它所必须创建的对象的类的时候
+3. 当一个类希望由它的子类来指定它所创建的对象的类的时候
 
 ## 抽象工厂
 
 ![产品族](/images/Design_pattern/abstract_factory.jpg)
-动机： 产品 -> 产品族, 工厂 -> 抽象工厂
 
 定义： 提供一个创建一系列相关或者相互依赖对象的接口，而无需指定它们具体的类。
+
+动机： 产品 -> 产品族, 工厂 -> 抽象工厂
 
 ### 类图
 
 ![类图](/images/design_pattern/abstract_factory.png)
 
 1. Factory: 声明创建抽象产品对象的操作接口
-2. ConcreteFactory: 实现创建具体产品对象的操作
+2. ConcreteFactory: 实现创建具体产品对象的操作，最好实现为singleton的。一个应用中一般每个产品系列只需要一个实例。
 3. AbstractProduct: 为一类产品对象声明一个接口
 4. ConcreteProduct: 定义一个被具体工厂创建的产品对象；实现AbstractProduct接口
 
@@ -82,8 +85,13 @@ todo
 
 1. 有利于产品的一致性
 2. 开闭原则：
-    * 遵从：添加新的产品组合时，新增对应的工厂类即可。
-    * 违反：添加新的产品时，所有的工厂类都需要添加对应的创建方法
+    * 遵从：添加新的产品组合时，新增对应的工厂类即可。当需要更改一个产品组合时，修改配置即可。
+    * 违反：添加新的产品时，所有的工厂类都需要添加对应的创建方法。
+    * 定义可扩展的工厂：一种灵活但不太安全的设计是给创建对象的操作增加一个参数，AbstractFactory只需要一个工厂方法和元创建对象的种类的参数。
+
+### 适用场景
+
+1. 产品之间有相互依赖，可以通过抽象工厂来处理产品的依赖，维护其一致性。
 
 ## 参考
 
