--- a/_posts/clean_code/2016-07-26-builder.md
+++ b/_posts/clean_code/2016-07-26-builder.md
@@ -12,14 +12,20 @@ tags: builder
 
 将一个复杂对象的构建与它的表示分离，使得同样的构建过程可以创建不同的表示。（封装一个产品的构造过程，并允许按步骤构造，经常被用来创建组合结构。）
 
+类图：
+
+![builder](/images/design_pattern/builder.png)
+
+## 使用场景
+
+1. 当创建对象的算法应该独立于对象的组成部分以及他们的装配方式时。
+2. 当构造过程必须允许被构造的对象有不同的行为时。
+
 ## 应用举例
 
 1. lombok的@Builder注解,就是effective java中讲的。
 2. spring mvc中的UriComponentsBuilder
 
-类图：
-
-![builder](/images/design_pattern/builder.png)
 
 ## 优缺点
 
