--- a/_posts/clean_code/2016-07-26-command.md
+++ b/_posts/clean_code/2016-07-26-command.md
@@ -54,7 +54,7 @@ tags: command
 
 3. 你可以将多个命令装配成一个复合命令，复合命令是Composite模式的一个实例
 
-4. 符合开闭原则： 增加新的Command很容易，因为这无需改变已有的类，
+4. 符合开闭原则： 增加新的Command很容易,无需改变已有的类
 
 ## 实例
 
