--- a/_posts/clean_code/2016-07-26-mediator.md
+++ b/_posts/clean_code/2016-07-26-mediator.md
@@ -5,13 +5,24 @@ categories: clean_code
 tags: mediator
 ---
 
+* TOC
+{:toc}
+
+## 定义
+用一个中介对象来封装一系列的对象交互。中介者使各对象不需要显式地相互引用，从而使其耦合松散，而且可以独立地改变它们之间的交互。
+
 ![类图](/images/design_pattern/mediator.png)
 
-中介者、双方或多方的父类、被中介的多方
+1. Mediator
+    * 中介者定义一个接口用于与各同时对象通信
+2. ConcreteMediator
+    * 具体中介者通过协调各同时独享实现协作行为
+    * 了解并维护它的各个同事
+3. Colleague
+    * 每一个同事类都知道它的中介者对象
+    * 每一个同事对象在需与其他的同事通信的时候，与它的中介者通信。
 
-1.  中介者接口申明一个联络方法
-2.  租房者和房主（被中介的多方）都需要持有中介的信息
-3.  中介者也需要知道租房者和房主（被中介的多方）的信息
-4.  租房者和房主的联络方法实际上都会调用中介的联络方法
+
+## 参考
 
 [wikipedia](https://en.wikipedia.org/wiki/Mediator_pattern)
