--- a/_posts/clean_code/2016-07-26-command.md
+++ b/_posts/clean_code/2016-07-26-command.md
@@ -48,7 +48,7 @@ tags: command
 
 ## 优缺点
 
-1. 将调用操作的对象与指导如何实现该操作的对象解耦，(同时对请求复用)
+1. 将调用操作的对象与指导如何实现该操作的对象解耦，(对请求、调用或者说操作 进行了抽象，复用)
 
 2. Command是头等的对象，它们可像其他的对象一样被操纵和扩展
 
