--- a/_posts/clean_code/2016-07-26-proxy.md
+++ b/_posts/clean_code/2016-07-26-proxy.md
@@ -8,13 +8,42 @@ tags: proxy cglib InvocationHandler
 * TOC
 {:toc}
 
-# 代理模式
+## 代理模式
 
-代理类和被代理类同时实现接口，代理类通过 **组合** 方式代理被代理类，实现 **额外** 的操作
+为其他对象提供一中代理以控制对这个对象的访问
 
-# 动态代理
+类图
+![代理模式](/images/design_pattern/proxy.gif)
 
-## jdk动态代理
+1. Proxy
+    * 保存一个引用是的代理可以访问实体，若RealSubject和Subject的接口相同，Proxy会引用Subject
+    * 提供一个与Subject的接口相同的接口，这样代理就可以用来替换实体
+    * 控制对实体的存取，并可能负责创建和删除它
+    * 其他功能依赖于代理的类型
+    * Remote Proxy负责对请求及其参数进行编码，并向不同地址空间中的实体发送已编码的请求
+    * Virtual Proxy可以缓存实体的附加信息，以便延迟对它的访问。
+    * Protection Proxy 检查调用者是否具有实现一个请求所必须的访问权限。
+2. Subject
+    * 定义RealSubject和Proxy的公用接口，这样就在任何使用RealSubject的地方都可以使用Proxy
+3. RealSubject
+    * 定义Proxy所代表的实体
+
+## 优缺点
+
+1. Proxy模式在访问对象时引入了一定程序的间接性，根据代理的类型，附加的间接性有多种用途：
+    * Remote Proxy可以隐藏一个对象存在于不同地址空间的事实
+    * Virtual Proxy可以进行最优化，例如根据要求创建对象
+    * Protection Proxies和Smart Reference都允许在访问一个对象时有一些附加的内务处理
+
+
+## 实例
+
+1. 动态代理 Proxy#newProxyInstance（spring用的太多了）
+2. aop
+
+## 动态代理
+
+### jdk动态代理
 
 ```
 interface Booker {
@@ -66,7 +95,7 @@ public class JdkDynamicProxyTest {
 2. `Proxy`类含有一个`InvocationHandler`的属性，我们代码中InvocationHandler的实现为`TransactionInvocationHandler`
 3. bookerProxy实现的Booker接口中的book方法，实际上是通过调用TransactionInvocationHandler的invoke方法实现的。
 
-### 创建代理对象
+#### 创建代理对象
 
 首先看下Proxy.newProxyInstance方法签名：
 
@@ -178,7 +207,7 @@ private static final class ProxyClassFactory
 }
 ```
 
-### 生成的代理类
+#### 生成的代理类
 
 通过debug，我们在defineClass0处打个断点，通过idea的alt + F8，动态运行`new FileOutputStream("/Users/lichuangjian/Proxy.class").write(proxyClassFile)`,就可以在目录下/Users/lichuangjian/Proxy.class看到生成的代理类了。
 
@@ -247,7 +276,7 @@ final class $Proxy2 extends Proxy implements Booker {
 }
 ```
 
-## cglib代理
+### cglib代理
 
 先上代码例子：
 
@@ -286,9 +315,9 @@ public class CglibProxyTest {
 
 生成的代理类，继承自`net.sf.cglib.proxy.Factory`，实现了CglibBooker接口。
 
-# 代理模式与装饰器模式
+## 代理模式与装饰器模式
 
-# 参考
+## 参考
 
 [wikipedia](https://en.wikipedia.org/wiki/Proxy_pattern)
 
