--- a/_posts/think/2017-02-06-2017_year_plan.md
+++ b/_posts/think/2017-02-06-2017_year_plan.md
@@ -46,15 +46,15 @@ tags: plan
 
 这几本书都有翻过，基本都在50%之上，但感觉还是差点劲。重在总结，串联知识，升华，结合已有经验再做归纳，生成blog。
 
-时间： 2月7日-7月31日 
+时间： 2月7日-7月31日
 
 书籍：
 
 1. 实现模式*  done
 
-2. head first设计模式* doing
+2. head first设计模式* done
 
-3. 设计模式*  doing
+3. 设计模式*  done
 
 4. 领域驱动设计 软件核心复杂性应对之道* todo
 
@@ -62,7 +62,7 @@ tags: plan
 
 6. effective java 第二版  undo
 
-7. 重构  doing
+7. 重构  done （代码整洁之道读了部分、代码大全先不读了）
 
 ##### java并发
 
@@ -78,7 +78,7 @@ tags: plan
 
 4. netty权威指南（optional）
 
-除了2，其余三本买回来还没翻过呢，希望借此更加深入的学习java并发的相关知识。能力要求
+除了2，其余三本买回来还没翻过呢，希望借此更加深入的学习java并发的相关知识。
 
 ##### 网络
 
